--- a/Belita/App/views/header.html
+++ b/Belita/App/views/header.html
@@ -1,5 +1,5 @@
 ﻿<header ng-controller="headerController" ng-init="GetRoles()">
-    <div class="inner_logo_box"><img src="App/images/inner_lgo.jpg"></div>
+    <div class="inner_logo_box"><img src="App/images/inner_lgo.png"></div>
     <!-- nav -->
     <div class="nav_bar_box">
         <nav class="navbar navbar-default">
