Belita CRO UI Changes : Login Button color change

--- a/Belita/App/css/custom.css
+++ b/Belita/App/css/custom.css
@@ -729,11 +729,14 @@ header .glyphicon {
 
 .btn[disabled] {
     background: #494949!important;
+    opacity: 1!important;
 }
 
     .btn[disabled]:hover {
         background: #494949!important;
+        opacity: 1!important;
     }
+
 
 .btnDropdown[disabled] {
     background: #fff;
