New API integrated for service city delete UI changes

--- a/Belita/App/css/custom.css
+++ b/Belita/App/css/custom.css
@@ -544,7 +544,7 @@ header .glyphicon {
     display: block;
     padding: 10px;
     color: #fff;
-    background-color: #be8a94;
+    background-color: #ed1c24;
 }
 
     .panel-title > a:hover {
