--- a/Belita/App/views/service.html
+++ b/Belita/App/views/service.html
@@ -168,6 +168,9 @@
                                                     <a ng-show="!item.edit" ng-click="EditCity(item.cityId)">
                                                         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                                                     </a>
+                                                    <a  ng-click="DeleteService(item)">
+                                                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                                                    </a>
                                                     <!--<button type="button" ng-show="item.edit" class="btn btn-default" ng-click="CancelCity(item.cityId)">
                                                         <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                                                     </button>
